--- a/app/assets/stylesheets/borg.css.scss
+++ b/app/assets/stylesheets/borg.css.scss
@@ -139,3 +139,20 @@ img.remote {
 	border-color: white;
 }
 
+
+
+
+// center login-button
+#loginbutton {
+	margin-top: 15px;
+	margin-left: 55px;
+	width: 110px;
+}
+
+// center login-dialog
+.form_user_session {
+	margin-top: 15%;
+	margin-left: auto;
+  margin-right: auto;
+	width: 350px;
+}
