--- a/app/views/layouts/application_one_column_content.html.haml
+++ b/app/views/layouts/application_one_column_content.html.haml
@@ -3,7 +3,7 @@
 %html{ :xmlns => "http://www.w3.org/1999/xhtml", :'xml:lang' => "de", :lang => "de" }
 	%head
 		%title
-			Borg
+			Filmdatenbank
 		%meta{ :"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
 		= favicon_link_tag asset_path('favicon.ico'), :type => "image/x-icon"
 		= stylesheet_link_tag    "application", :media => "all"
