--- a/app/assets/stylesheets/borg.css.scss
+++ b/app/assets/stylesheets/borg.css.scss
@@ -122,6 +122,14 @@ ul.movie {
 	}
 }
 
+ul.entrant_other {
+  margin-left: 2em;
+  text-indent: -0.6em;
+	li {
+		display: block;
+	}
+}
+
 
 ul.files {
 	display: inline;
