--- a/app/views/layouts/application_one_column_content.html.haml
+++ b/app/views/layouts/application_one_column_content.html.haml
@@ -3,7 +3,7 @@
 %html{ :xmlns => "http://www.w3.org/1999/xhtml", :'xml:lang' => "de", :lang => "de" }
 	%head
 		%title
-			Borg - The root of all content
+			Borg - Root of all content
 		%meta{ :"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
 		= favicon_link_tag asset_path('favicon.ico'), :type => "image/x-icon"
 		= stylesheet_link_tag    "application", :media => "all"
@@ -11,7 +11,7 @@
 		= csrf_meta_tags
 	%body
 		#navigation
-			= nav_bar :brand => "Borg - The root of all content", :responsive => false, :fluid => true do
+			= nav_bar :brand => "Borg - Root of all content", :responsive => false, :fluid => true do
 				= menu_group :pull => :right do
 					= navsearchfield params[:by_plot].nil?  ? "Inhaltsuche" : params[:by_plot],  {:id => "plotsearch", :action => movies_path}, "by_plot"
 					= navsearchfield params[:by_title].nil? ?  "Titelsuche" : params[:by_title], {:id => "titlesearch" , :action => movies_path},"by_title"
