--- a/app/views/layouts/application_one_column_content.html.haml
+++ b/app/views/layouts/application_one_column_content.html.haml
@@ -9,6 +9,7 @@
 		= stylesheet_link_tag    "application", :media => "all"
 		= javascript_include_tag "application"
 		= csrf_meta_tags
+		= auto_discovery_link_tag :atom, :controller => "entrants", :action => "torrents"#, :title => "Torrents"
 	%body
 		#navigation
 			= nav_bar :brand => "Borg - Root of all content", :responsive => false, :fluid => true do
