--- a/app/views/entrants/_torrent.html.haml
+++ b/app/views/entrants/_torrent.html.haml
@@ -31,7 +31,7 @@
 			
 	- unless other[:details].nil? 
 		- other[:details].each do |key,value|
-			%li{:class => "icon-book"}
+			%li{:class => "icon-info-sign"}
 				= "#{key} #{value}"
 			
 	- unless other[:description].nil? ||  other[:description].empty?
