--- a/app/views/entrants/_feeditem.rss.haml
+++ b/app/views/entrants/_feeditem.rss.haml
@@ -13,7 +13,7 @@
 					= link_to feeditem.other[:magnetlink], feeditem.other[:magnetlink]
 				- unless feeditem.other[:size].empty?
 					%li= feeditem.other[:size]
-				- feeditem.other[:details].each do |detail|
+				-# feeditem.other[:details].each do |detail|
 					%li
 						- detail.each do |key,value|
 							= "#{key} #{value}"
