--- a/app/views/layouts/application_one_column_content.html.haml
+++ b/app/views/layouts/application_one_column_content.html.haml
@@ -9,8 +9,8 @@
 		= stylesheet_link_tag    "application", :media => "all"
 		= javascript_include_tag "application"
 		= csrf_meta_tags
-		=# auto_discovery_link_tag :rss, :controller => "entrants", :action => "torrents", :format => :rss
-		=# auto_discovery_link_tag :atom, :controller => "entrants", :action => "torrents", :format => :atom
+		= auto_discovery_link_tag :rss, :controller => "entrants", :action => "feed", :format => :rss
+		= auto_discovery_link_tag :atom, :controller => "entrants", :action => "feed", :format => :atom
 	%body
 		#navigation
 			= nav_bar :brand => "Borg - Root of all content", :responsive => false, :fluid => true do
