--- a/app/views/layouts/application_two_column_content.html.haml
+++ b/app/views/layouts/application_two_column_content.html.haml
@@ -9,6 +9,8 @@
 		= stylesheet_link_tag    "application", :media => "all"
 		= javascript_include_tag "application"
 		= csrf_meta_tags
+		= auto_discovery_link_tag :rss, :controller => "entrants", :action => "feed", :format => :rss
+		= auto_discovery_link_tag :atom, :controller => "entrants", :action => "feed", :format => :atom
 	%body
 		.container-fluid
 			#navigation
