--- a/app/views/entrants/_feeditem.rss.haml
+++ b/app/views/entrants/_feeditem.rss.haml
@@ -1,6 +1,6 @@
 %table{:border => 1, :width => "100%;", :style => "width: 100%;"}
 	%tr
-		%td{:valign => "top", :align => "left", :width => "1%"}
+		%td{:valign => "center", :align => "center"}
 			= image_tag feeditem.thumbnail.url
 		%td{:valign => "top"}
 			%ul
