--- a/app/views/entrants/_feeditem.rss.haml
+++ b/app/views/entrants/_feeditem.rss.haml
@@ -8,7 +8,7 @@
 	- unless item.other[:details].nil? || item.other[:stats].empty?
 		%li= item.other[:stats]	
 	%li= link_to "Quelle", item.srcurl
-		= link_to item.other[:magnetlink], item.other[:magnetlink]
+		= link_to "Magnet", "item.other[:magnetlink]&dn=#{CGI.escapeHTML(item.title)}"
 	- unless item.other[:details].nil?
 		- item.other[:details].each do |key,value|
 			%li
