--- a/app/views/layouts/_headnavigation.html.haml
+++ b/app/views/layouts/_headnavigation.html.haml
@@ -5,7 +5,7 @@
 			= link_to "#", :class => "btn btn-primary" do
 				%i{:class => "icon-user icon-white"}
 				User
-				= link_to "#", :class => "btn btn-primary dropdown-toggle" do
+				= link_to "#", :class => "btn btn-primary dropdown-toggle", :"data-toggle" => "dropdown" do
 					%span{:class => "caret"}
 				%ul{:class => "dropdown-menu"}
 					%li
