--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,21 +1,1 @@
-.btn-group
-	= link_to "#", :class => "btn btn-primary" do
-		%i{:class => "icon-user icon-white"}
-		User
-		= link_to "#", :class => "btn btn-primary dropdown-toggle", :"data-toggle" => "dropdown" do
-			%span{:class => "caret"}
-		%ul{:class => "dropdown-menu"}
-			%li
-				= link_to "#" do
-					%i{:class => "icon-pencil"}
-						Edit
-			%li
-				= link_to "#" do
-					%i{:class => "icon-trash"}
-						Delete
-			%li
-				= link_to "#" do
-					%i{:class => "icon-ban-circle"}
-						Ban
-
-=# movies_grid(collection,paginate(collection))
+= movies_grid(collection,paginate(collection))
