--- a/app/assets/stylesheets/borg-less.css.less
+++ b/app/assets/stylesheets/borg-less.css.less
@@ -9,8 +9,8 @@
 }
 
 
-.videocodec, .aspectratio {
-	.opacity(50);
+.audiocodec, .videocodec, .aspectratio, .audiochannels, videoresolution {
+	.opacity(90);
 }
 
 .moviedetails {
@@ -20,8 +20,14 @@
 }
 
 .movieoverview {
-	.localtitle, .year, .originaltitle, .moviecover, .plotcontent, .videocodec, .aspectratio{
+	.localtitle, .year, .originaltitle, .moviecover, .plotcontent {
 		.opacity(70);
 	}
+	
+	.audiocodec, .videocodec, .aspectratio, .audiochannels, .videoresolution {
+		.opacity(70);
+	}
+	
+	
 }
 		
