--- a/app/views/movies/_details.html.haml
+++ b/app/views/movies/_details.html.haml
@@ -1,4 +1,4 @@
-= render "mediafiles/fanart", :mediafile => movie.file, :animate => false, :cssclass => "fanartbackground"
+= render "mediafiles/fanart", :mediafile => movie.file, :animate => true, :cssclass => "fanartbackground"
 .row-fluid
 	.movieoverview
 		.head
