--- a/app/assets/stylesheets/borg-less.css.less
+++ b/app/assets/stylesheets/borg-less.css.less
@@ -9,7 +9,7 @@
 }
 
 
-.audiocodec, .videocodec, .aspectratio, .audiochannels, videoresolution {
+.audiocodec, .videocodec, .aspectratio, .audiochannels, videoresolution, .audiolanguage, .subtitlelanguage {
 	.opacity(90);
 }
 
@@ -24,7 +24,7 @@
 		.opacity(70);
 	}
 	
-	.audiocodec, .videocodec, .aspectratio, .audiochannels, .videoresolution {
+	.audiocodec, .videocodec, .aspectratio, .audiochannels, .videoresolution, .audiolanguage, .subtitlelanguage {
 		.opacity(70);
 	}
 	
