--- a/app/views/layouts/application_one_column_content.html.haml
+++ b/app/views/layouts/application_one_column_content.html.haml
@@ -3,14 +3,17 @@
 %html{ :xmlns => "http://www.w3.org/1999/xhtml", :'xml:lang' => "de", :lang => "de" }
 	%head
 		%title
-			Borg - Root of all content
+			- unless current_user.nil?
+				BORG - Root of all content
+			- else
+				BORG
 		%meta{ :"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
 		= favicon_link_tag asset_path('favicon.ico'), :type => "image/x-icon"
 		= stylesheet_link_tag    "application", :media => "all"
 		= javascript_include_tag "application"
 		= csrf_meta_tags
-		= auto_discovery_link_tag :rss, :controller => "entrants", :action => "feed", :format => :rss
-		= auto_discovery_link_tag :atom, :controller => "entrants", :action => "feed", :format => :atom
+		= auto_discovery_link_tag :rss, torrentfeed_path
+		= auto_discovery_link_tag :rss, sfilefeed_path
 	%body
 		= render "layouts/headnavigation" unless current_user.nil?
 		#maincontent
