--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -1,17 +1,21 @@
 - other = object.other
 
 %ul{:class => "entrant_other icons"}
-	- if object.thumbnail.exists?
-		= link_to image_tag(object.thumbnail.url, :style => "float: right; width: 15%;", :class => "img-rounded"), object.thumbnail.url
-	- elsif !other[:thumbnail].nil? && !other[:thumbnail].empty?
-		= link_to image_tag(other[:thumbnail], :style => "float: right; width: 15%;", :class => "img-rounded"), other[:thumbnail]
+	- if object.image.exists?
+		= link_to image_tag(object.image.url, :style => "float: right; width: 15%;", :class => "img-rounded"), object.image.url
+	- elsif !object.imageurl.nil? && !object.imageurl.empty?
+		= link_to image_tag(object.imageurl, :style => "float: right; width: 15%;", :class => "img-rounded"), object.imageurl
 
-	- unless other[:thumbnail].nil? || other[:thumbnail].empty?
-		%li{:class => "icon-picture"}
-			= other[:thumbnail]
 
 	%li{:class => "icon-file"}
 		= object.title
+
+	%li{:class => "icon-repeat"}
+		= object.update_counter
+
+	- unless object.imageurl.nil? || object.imageurl.empty?
+		%li{:class => "icon-picture"}
+			= object.imageurl
 
 	%li{:class => "icon-calendar"}
 		= l object.date, :format => :with_weekday_and_time
