--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -6,7 +6,6 @@
 	- elsif !object.imageurl.nil? && !object.imageurl.empty?
 		= link_to image_tag(object.imageurl, :style => "float: right; width: 15%;", :class => "img-rounded"), object.imageurl
 
-
 	%li{:class => "icon-file"}
 		= object.title
 
@@ -33,8 +32,9 @@
 			= link_to "Extern", object.srcurl
 	
 	- unless object.diff.nil? || object.diff.empty?
-		%li{:class => "icon-eye-open"}
-			=  object.diff.html_safe
+		- object.diff.each do |diff|
+			%li{:class => "icon-eye-open"}
+				= diff.html_safe
 			
 	- unless other[:content].nil? ||  other[:content].empty?
 		%li{:class => "icon-book"}
