--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -32,9 +32,13 @@
 			= link_to "Extern", object.srcurl
 	
 	- unless object.diff.nil? || object.diff.empty?
-		- object.diff.each do |diff|
+		- if object.diff.is_a? Array
+			- object.diff.each do |diff|
+				%li{:class => "icon-eye-open"}
+					= diff.html_safe
+		- else
 			%li{:class => "icon-eye-open"}
-				= diff.html_safe
+				= object.diff.html_safe
 			
 	- unless other[:content].nil? ||  other[:content].empty?
 		%li{:class => "icon-book"}
