--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -8,36 +8,34 @@
 
 	%li{:class => "icon-file"}
 		= object.title
-
-	%li{:class => "icon-repeat"}
-		= object.update_counter
-
-	- unless object.imageurl.nil? || object.imageurl.empty?
-		%li{:class => "icon-picture"}
-			= object.imageurl
-
-	%li{:class => "icon-calendar"}
-		= l object.date, :format => :with_weekday_and_time
-
-	%li{:class => "icon-pencil"}
-		= l object.updated_at, :format => :with_weekday_and_time
-
+		
 	- unless object.category.nil? || object.category.empty?
 		%li{:class => "icon-tag"}
 			= object.category
+
+	-# unless object.imageurl.nil? || object.imageurl.empty?
+		%li{:class => "icon-picture"}
+			= object.imageurl
 			
 	- unless object.srcurl.nil? || object.srcurl.empty?
 		%li{:class => "icon-share-alt"}
 			= link_to "Lokal", entrant_url(object)
 			= link_to "Extern", object.srcurl
+			
+	%li{:class => "icon-calendar"}
+		= l object.date, :format => :with_weekday_and_time
+
+	- unless object.date == object.updated_at
+		%li{:class => "icon-pencil"}
+			= l object.updated_at, :format => :with_weekday_and_time
+
+		%li{:class => "icon-repeat"}
+			= object.update_counter
 	
-	- if object.diff.is_a? Array
-		- object.diff.each do |diff|
-			%li{:class => "icon-eye-open"}
-				= diff.html_safe
-	- else
-		%li{:class => "icon-eye-open"}
-			= object.diff.html_safe
+		- unless object.diff.nil? || object.diff.empty?
+			- object.diff.each do |diff|
+				%li{:class => "icon-eye-open"}
+					= diff.html_safe
 			
 	- unless other[:content].nil? ||  other[:content].empty?
 		%li{:class => "icon-book"}
