--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -32,7 +32,7 @@
 		%li{:class => "icon-repeat"}
 			= object.update_counter
 	
-		- unless object.diff.nil? || object.diff.empty?
+		-# unless object.diff.nil? || object.diff.empty?
 			- object.diff.each do |diff|
 				%li{:class => "icon-eye-open"}
 					= diff.html_safe
