--- a/app/views/entrants/_feedcontent_sfile.rss.haml
+++ b/app/views/entrants/_feedcontent_sfile.rss.haml
@@ -6,5 +6,5 @@
 	%li= link_to "Quelle", entrant_url(item)
 	%li= link_to "Original-Quelle", item.srcurl
 	
-- unless item.other[:content].nil?
+- unless item.content.nil?
 	= raw sfile_content(item,false)
