--- a/app/views/entrants/_feedcontent_sfile.rss.haml
+++ b/app/views/entrants/_feedcontent_sfile.rss.haml
@@ -4,6 +4,9 @@
 	= link_to image_tag(item.imageurl, :style => "float: right; width: 15%;", :class => "img-rounded"), item.imageurl
 
 %ul
+	- unless item.other[:imdbid].nil?
+		%li= link_to "[#{item.other[:imdbid]}]", "http://www.imdb.de/title/#{item.other[:imdbid]}"
+	
 	%li= item.category 		
 	%li
 		= link_to "Quelle", entrant_url(item)
