--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -8,6 +8,8 @@
 
 	%li{:class => "icon-file"}
 		= object.title
+		- unless other[:spoiler].nil?
+			= other[:spoiler].size
 		- unless other[:imdbid].nil?
 			= link_to "[#{other[:imdbid]}]", "http://www.imdb.de/title/#{other[:imdbid]}",  :rel => "tooltip", :title => "IMDB"
 		
