--- a/app/views/entrants/_feedcontent_torrent.rss.haml
+++ b/app/views/entrants/_feedcontent_torrent.rss.haml
@@ -14,7 +14,7 @@
 		%li= item.other[:stats]	
 		
 	%li= link_to "Quelle", entrant_url(item)
-	%li= link_to "Original-Quelle", item.srcurl
+	%li= link_to "Primärquelle", item.srcurl
 	
 	- unless item.other[:magnetlink].nil? || item.other[:magnetlink].empty?
 		%li= link_to "Magnet", "#{item.other[:magnetlink]}&dn=#{CGI.escapeHTML(item.title)}"
