--- a/app/views/entrants/_feedcontent_sfile.rss.haml
+++ b/app/views/entrants/_feedcontent_sfile.rss.haml
@@ -3,7 +3,7 @@
 	
 	- unless item.other[:movietitle].nil?
 		%li= item.other[:movietitle]
-		%li= item.other[:movieyear]
+		%li= "#{item.other[:movieyear]}"
 	
 	- unless item.imdbid.nil?
 		%li= link_to "#{item.imdbid}", "http://www.imdb.de/title/#{item.imdbid}"
